--- a/package.json
+++ b/package.json
@@ -8,12 +8,22 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "browser":{
+	  "fs":false,
+	  "os":false,
+	  "path":false
+  },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.5",
     "@nextui-org/react": "1.0.0-beta.10",
-    "next": "12.3.0",
+    "fs": "^0.0.1-security",
+    "next": "13.3.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-select": "^5.7.4"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
