--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "browser":{
-	  "fs":false,
-	  "os":false,
-	  "path":false
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -21,6 +21,7 @@
     "fs": "^0.0.1-security",
     "next": "13.3.4",
     "next-themes": "^0.2.1",
+    "puppeteer": "^21.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-select": "^5.7.4"
